--- a/requirements.txt
+++ b/requirements.txt
@@ -32,4 +32,7 @@ text-unidecode==1.3
 tzdata==2023.4
 whitenoise==6.6.0
 pip~=24.0.0
+django-widget-tweaks==1.5.0
+django-schema-viewer==0.4.1
+Pillow==10.2.0
 
