--- a/.github/workflows/webappalive.yml
+++ b/.github/workflows/webappalive.yml
@@ -2,7 +2,8 @@ name: Schedule for GET requests
 
 on:
   schedule:
-    - cron: '*/15 * * * *'
+    # Run every 15 minutes between 08:00 and 22:00
+    - cron: '*/15 8-21 * * *'
   workflow_dispatch:
 
 jobs:
@@ -13,9 +14,10 @@ jobs:
         run: |
           for i in {1..2}
           do
-            echo "Execute GET requests"
-            response=$(curl -sS https://freelance-services.onrender.com/)
+            echo "Execute first GET request"
+            response=$(curl -sS https://car-service-cuh7.onrender.com/)
             echo "Wait 300 seconds"
             sleep 300
             echo "GET Request operation was successful"
           done
+
