--- a/.github/workflows/webappalive.yml
+++ b/.github/workflows/webappalive.yml
@@ -15,7 +15,8 @@ jobs:
           for i in {1..2}
           do
             echo "Execute first GET request"
-            response=$(curl -sS https://car-service-cuh7.onrender.com/)
+            # response=$(curl -sS https://car-service-cuh7.onrender.com/)
+            response=$(curl -sS https://freelance-services.onrender.com/)
             echo "Wait 300 seconds"
             sleep 300
             echo "GET Request operation was successful"
