--- a/.github/workflows/webappalive.yml
+++ b/.github/workflows/webappalive.yml
@@ -3,7 +3,7 @@ name: Schedule for GET requests
 on:
   schedule:
      # Run every 15 minutes between 08:00 and 22:00 +3 UTC mon-fri
-    - cron: '*/15 5-18 * * 1-5'
+    - cron: '*/18 5-18 * * 1-5'
   workflow_dispatch:
 
 jobs:
@@ -15,8 +15,8 @@ jobs:
           for i in {1..2}
           do
             echo "Execute first GET request"
-            response=$(curl -sS https://car-service-cuh7.onrender.com/)
-            # response=$(curl -sS https://freelance-services.onrender.com/)
+            # response=$(curl -sS https://car-service-cuh7.onrender.com/)
+            response=$(curl -sS https://freelance-services.onrender.com/)
             echo "Wait 300 seconds"
             sleep 300
             echo "GET Request operation was successful"
